[project]
name = "request-shock"
version = "0.1.2"
description = "Adaptive Overseerr request limits based on Tautulli watch history"
requires-python = ">=3.11"
dependencies = [
  "overseerr>=1.0.2",
  "tautulli>=4.0.0",
  "requests>=2.31.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pytest>=8.0.0",
  "pytest-cov>=7.0.0",
  "responses>=0.25.0",
  "ruff>=0.8.0",
]

[project.scripts]
request-shock = "request_shock.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--cov=request_shock",
  "--cov=tools",
  "--cov-report=term-missing",
  "--cov-report=markdown:coverage.md",
  "--cov-fail-under=85",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = ["request_shock/__main__.py"]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["request_shock", "tools"]
